Fix portfolio overflow card styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -340,7 +340,6 @@ img {
     flex-direction: column;
     width: calc((100% - 48px) / 3);
     height: 100%;
-    overflow: hidden;
     background: #fff;
     cursor: pointer;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -352,6 +351,7 @@ img {
 
 .portfolio-thumb {
     position: relative;
+    overflow: hidden;
 }
 
 .portfolio-item-description {
@@ -366,9 +366,9 @@ img {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     background-color: #4d5ae5;
-    padding: 40px 32px 32px;
-    transform: translatey(145%);
-    transition: transform 250ms ease-in-out;
+    padding: 40px 32px;
+    transform: translatey(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .portfolio-item-description, .portfolio-item:focus .portfolio-item-description {
